added resource and setup sections